<resources>
    <string name="app_name">Lets Talk</string>

    <string name="search_label">Search</string>
    <string name="search_hint">Search here</string>

    <string name="reply_hint">Reply here</string>
    <string name="reply">Reply</string>

    <string name="content">Content</string>
    <string name="title">Title text</string>

    <string name="login_text">Login</string>

    <string name="hot">whats hot</string>
    <string name="rated">top rated</string>
    <string name="discussed">most discussed</string>

    <string name="title_show">Title</string>
    <string name="login_title1">Lets</string>
    <string name="login_title2">Talk</string>
    <string name="login_screen_user_hint">User name</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="passwordConfirm">Password confirm</string>
    <string name="cancel">cancel</string>
    <string name="username">User name</string>
    <string name="search">Search</string>
    <string name="add">Post</string>
    <string name="logout">Logout</string>
    <string name="post_hint">Write your reply here</string>
    <string name="post_title">Post title</string>
</resources>
